--- a/fakeDIYa/res/values/strings.xml
+++ b/fakeDIYa/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">fakeDIYa</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
+    <string name="no_diys">No Diys Yet</string>
 
 </resources>
