new tabs: Edit | Triggers  | Actions

--- a/Kreator/res/values/strings.xml
+++ b/Kreator/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="app_name">Diyapp Kreator</string>
     <string name="no_diys">No Diys Yet</string>
     <string name="menu_insert">Add Diy</string>
@@ -8,4 +9,9 @@
     <string name="body">Body</string>
     <string name="confirm">Confirm</string>
     <string name="edit_diy">Edit Diy</string>
+    <string name="title_activity_diy_edit_triggers">DiyEditTriggersActivity</string>
+    <string name="menu_settings">Settings</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="title_activity_diy_edit_actions">DiyEditActionsActivity</string>
+
 </resources>
