--- a/Kreator/res/values/strings.xml
+++ b/Kreator/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="menu_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_diy_edit_actions">DiyEditActionsActivity</string>
+    <string name="title_activity_diy_map">DiyMapActivity</string>
 
 </resources>
