--- a/Kreator/res/values/strings.xml
+++ b/Kreator/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="edit_diy">Edit Diy</string>
     <string name="title_activity_diy_edit_triggers">DiyEditTriggersActivity</string>
     <string name="menu_settings">Settings</string>
+    <string name="menu_select_position">Select position</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_diy_edit_actions">DiyEditActionsActivity</string>
     <string name="title_activity_diy_map">DiyMapActivity</string>
