add ShowDiyActivity to fakeDIYa

--- a/fakeDIYa/res/values/strings.xml
+++ b/fakeDIYa/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="menu_settings">Settings</string>
     <string name="title_activity_triggers_test">Triggers Test</string>
     <string name="title_activity_actions_test">Actions Test</string>
+    <string name="title_activity_show_diy">ShowDiyActivity</string>
 
 </resources>
